Fixed all modules, except for projectJavafx.